--- a/be/package.json
+++ b/be/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.16.3",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "router": "^2.2.0",
+    "routes": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
